<resources>
    <string name="app_name">Recycle App</string>
    <string name="txtlogo">Recycle App</string>
    <string name="descriptionlogo">Recycle App</string>
    <string name="titulo1">En Recycle App estamos comprometidos con cuidar el medio ambiente desde tu hogar.</string>
    <string name="btn_inicio">Comencemos</string>
    <string name="titulo2">Iniciar Sesión</string>
    <string name="correo">Ingresa tu email</string>
    <string name="contraseña">Ingresa tu contraseña</string>
    <string name="boton_login">Ingresar</string>
    <string name="no_tienes_cuenta">¿Aún no tienes una cuenta?</string>
    <string name="registrate_aqui">--Registrate aquí--</string>
    <string name="titulo3">Regístrate</string>
    <string name="titulo4">Registrate y comencemos ahora.</string>
    <string name="nombre_registro">Ingresa tu nombre</string>
    <string name="correo_registro">Ingresa tu email</string>
    <string name="contraseña_registro">Crea tu contraseña</string>
    <string name="confirma_contraseña_registro">Confirma tu contraseña</string>
    <string name="boton_register">Registrarme</string>
    <string name="titulo5">Bienvenido</string>
    <string name="titulohome">Ayudanos con la misión de reciclar.</string>
    <string name="titulo6">Selecciona la categoria con la que quieres reciclar hoy.</string>
    <string name="boton_categorias">Categorías</string>
    <string name="boton_estadisticas">Estadísticas</string>
    <string name="boton_consejos">Consejos</string>
    <string name="titulo7">Categorias</string>
    <string name="boton_papel">Papel</string>
    <string name="boton_vidrio">Vídrio</string>
    <string name="boton_plastico">Plástico</string>
    <string name="boton_baterias">Pilas o Baterias de celular</string>
    <string name="titulo8">Consejos</string>
    <string name="titulo9">Estadísticas</string>
    <string name="titulo10">Consulta las cantidades máximas, mínimas y el promedio de reciclaje que lograste hacer en cada mes.</string>
    <string name="titulo11">Recomendaciones y sugerencias para fomentar el aumento de tu reciclaje.</string>
    <string name="btn_registrarcategorias">Registrar</string>
    <string name="text_vidrio">Registro de Vídrio</string>
    <string name="text_papel">Registro de Papel</string>
    <string name="text_plastico">Registro de Plástico</string>
    <string name="text_bateria">Registro de Pilas y/o Baterias de celular</string>
    <string name="text_mes">Mes de registro</string>
    <string name="text_valor">Valor ganado</string>
    <string name="text_cantidadpapel">Número de hojas reciclado</string>
    <string name="text_cantidadvidrio">Cantidad de vídrio reciclado (Kg)</string>
    <string name="text_cantidadplastico">Cantidad de plástico reciclado (Kg)</string>
    <string name="text_cantidadbateria">Número de pilas recicladas</string>
    <string name="conse_1">Reducir los envases o productos plásticos de un solo uso.</string>
    <string name="conse_2">Busca formas de reutilizar los materiales reciclables antes desecharlos. (realización de manualidades, reutilizar papel para envolver regalos etc…)</string>
    <string name="conse_3">Depositar los residuos en el contenedor adecuado (canecas con marcación por residuos).</string>
    <string name="conse_4">Instala botellones de agua para recargar tu recipiente personal.</string>
    <string name="conse_5">Utiliza hojas de papel reciclado e imprime por las dos caras.</string>
    <string name="conse_6">Utiliza Bolsas de tela para la realización de tus compras.</string>
    <string name="conse_7">Ten siempre a la mano tu termo y lleva tu propio vaso reutilizable a las cafeterías.</string>
    <string name="conse_8">Reduce los alimentos en recipientes de plástico y comprar productos a granel.</string>
    <string name="conse_9">Utilizar productos con baterías de litio.</string>
    <string name="conse_10">Utiliza utensilios de cocina y cubiertos hechos de madera, bambú o acero en vez de cubiertos, vasos y platos de plástico desechable.</string>
    <string name="btn_seleccion_mes">Selecciona Mes</string>
    <string name="tabla_categorias">Categorías</string>
    <string name="tabla_min">Cantidad Mínima</string>
    <string name="tabla_max">Cantidad Máxima</string>
    <string name="tabla_promedio">Total Promedio</string>
    <string name="tabla_papel">Papel</string>
    <string name="tabla_vidrio">Vidrio</string>
    <string name="tabla_plastico">Plástico</string>
    <string name="tabla_baterias">Pilas o Baterias</string>
</resources>