<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iniciar_sesion"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:textSize="35sp"
        android:layout_marginBottom="80dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/correo"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#333030"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextContraseña"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:textAlignment="center"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="30dp"
        android:importantForAutofill="no"
        android:textColorHint="#333030"
        android:background="@color/white"
        android:textSize="20sp"
        android:hint="@string/contraseña"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_ingreso"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/ColorButtons"
        android:text="@string/boton_login"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="17sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/no_tienes_cuenta" />

    <TextView
        android:id="@+id/textViewRegistrarUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="17sp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/registrate_aqui" />


</LinearLayout>