<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/categorias"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".CategoriesActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/titulo7"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/titulo6"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_papel"
        android:layout_width="300dp"
        android:textStyle="bold"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/white"
        android:text="@string/boton_papel"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:icon="@drawable/papericon"
        app:iconPadding="0dp"
        app:iconSize="60dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btn_vidrio"
        android:layout_width="300dp"
        android:textStyle="bold"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/white"
        android:text="@string/boton_vidrio"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:icon="@drawable/vidrioicon"
        app:iconPadding="0dp"
        app:iconSize="60dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btn_plastico"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/white"
        android:text="@string/boton_plastico"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:icon="@drawable/plasticoicon"
        app:iconPadding="0dp"
        app:iconSize="60dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/btn_baterias"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/white"
        android:text="@string/boton_baterias"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:icon="@drawable/batteryicon"
        app:iconPadding="0dp"
        app:iconSize="60dp"
        app:iconTint="@color/black" />

</LinearLayout>