<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/FondoApp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterPlasticActivity">

    <TextView
        android:id="@+id/textplastico"
        android:layout_width="match_parent"
        android:textSize="35sp"
        android:layout_marginBottom="100dp"
        android:layout_height="wrap_content"
        android:text="@string/text_plastico"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextMesPlastico"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/text_mes"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#333030"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextCantidadPlastico"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/text_cantidadplastico"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#333030"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextValorPlastico"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:textAlignment="center"
        android:ems="10"
        android:hint="@string/text_valor"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#333030"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_registro"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/ColorButtons"
        android:text="@string/btn_registrarcategorias"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>