<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnregisterBat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/itemregistro"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".RegisterBatteryActivity">

    <TextView
        android:id="@+id/textbateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/text_bateria"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerMonthCantBaterys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:entries="@array/months"
        android:popupElevation="10dp"
        android:scrollbarSize="6dp"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/editTextCantidadBateria"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/text_cantidadbateria"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#333030"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextValorBateria"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/text_valor"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#333030"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_registroBat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/ColorButtons"
        android:text="@string/btn_registrarcategorias"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>